--- a/style.css
+++ b/style.css
@@ -1,16 +1,60 @@
 html,
 body {
-  height: 50%;
-  background-color: #723e72;
-  color: #FFF;
-  font-family:'Open Sans', verdana;
+  font-family:'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
+header, footer {
+    color: #fff;
+    background-color: #FF4B36;
+    text-shadow: -0.06rem -0.06rem 0.06rem #D3360B;
+    padding: 1% 5%;
+}
 
-h1, h3{
+#main {
+    color: #000;
+    margin: 0 auto;
+    padding: 4% 0;
+    max-width: 70%;
+}
+
+footer {
+    text-align: right;
+}
+
+h1, h3 {
     text-align: center;
+}
+
+h3 {
+    line-height: 1.8em;
+}
+
+label {
+    color: #333;
 }
 
 input {
     color: #000;
+    width: 100%;
+}
+
+.pure-control-group {
+    margin: 2% 0;
+}
+
+.pure-button {
+    background-color: #FF4B36;
+    color: #fff;
+}
+
+.asterisk {
+    color: #FF4B36;
+}
+
+@media screen and (min-width: 780px) {
+    input {
+        width: 50%;
+    }
 }
